2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h
	(LLL_STUB_UNWIND_INFO_START): Align label to LP_SIZE instead
	of 8.
	(LLL_STUB_UNWIND_INFO_END): Likewise.
	(lll_timedlock): Load timeout pointer into RDX_LP.
	(lll_robust_timedlock): Likewise.

2012-05-15  Siddhesh Poyarekar  <siddhesh@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	[BZ #13613]
	* Makefile (tests): Add test cases.
	* descr.h (struct pthread): Add a comment describing multiple_threads.
	* pthreadP.h (__pthread_multiple_threads): Expand comment to include
	single-process case.
	* pthread_cancel.c (pthread_cancel): Enable multiple_threads
	before setting cancelstate of the thread.
	* sysdeps/unix/sysv/linux/libc_multiple_threads.c
	(__libc_multiple_threads): Add explanatory comment.
	* tst-cancel-self-cancelstate.c: New test case.
	* tst-cancel-self-canceltype.c: Likewise.
	* tst-cancel-self-cleanup.c: Supporting file for test cases.
	* tst-cancel-self-testcancel.c: New test case.
	* tst-cancel-self.c: Likewise.
	* vars.c: Expand comment to include single-process case.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/tls.h: Don't include <bits/wordsize.h>.
	(tcbhead_t): Remove __x86_64__ check.  Align rtld_savespace_sse
	to 32 bytes.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/pthread/pthread.h (__PTHREAD_RWLOCK_INT_FLAGS_SHARED):
	New.
	(PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP): Check
	__PTHREAD_RWLOCK_INT_FLAGS_SHARED instead of __WORDSIZE.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* shlib-versions: Move x86_64-.*-linux.* entry to ...
	* sysdeps/x86_64/64/shlib-versions: Here.  New file.
	* sysdeps/x86_64/x32/shlib-versions: New file.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Define x32
	__SIZEOF_PTHREAD_XXX_T.
	(__pthread_internal_list): Check __x86_64__ instead of __WORDSIZE.
	(pthread_mutex_t): Likewise.
	(pthread_rwlock_t): Likewise.